# my-arithmetic-oscarb

./: .gitlab-ci.yml  CR_CI-CD.md  LICENSE.txt  README.md  pyproject.toml
src/my_arithmetic_oscarb/: __about__.py  function.py
tests/: __init__.py  test_function.py
